chore: adiciona mensagem de sucesso

--- a/src/MeuPonto.Web/Modules/Empregadores/Editar.cshtml
+++ b/src/MeuPonto.Web/Modules/Empregadores/Editar.cshtml
@@ -59,6 +59,7 @@
 
 @section FormActions {
     <input type="hidden" asp-for="Empregador.Version" />
+    <input type="hidden" asp-for="RefererUrl" />
     <button type="submit" value="Salvar" class="btn btn-primary">
         Salvar
     </button>
