--- a/src/MeuPonto.Web/Modules/Empregadores/Excluir.cshtml
+++ b/src/MeuPonto.Web/Modules/Empregadores/Excluir.cshtml
@@ -101,6 +101,7 @@
 
 @section FormActions {
     <input type="hidden" asp-for="Empregador.Id" />
+    <input type="hidden" asp-for="RefererUrl" />
     <button type="submit" value="Excluir" class="btn btn-danger">
         Excluir
     </button>
