--- a/src/MeuPonto.Web/Modules/Perfis/Editar.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Editar.cshtml
@@ -121,6 +121,7 @@
 
 @section FormActions {
     <input type="hidden" asp-for="Perfil.Version" />
+    <input type="hidden" asp-for="RefererUrl" />
     <button type="submit" value="Salvar" class="btn btn-primary">
         Salvar
     </button>
