--- a/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Detalhar.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Detalhar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model MeuPonto.Modules.Pontos.Comprovantes.DetalharComprovanteModel
+@model MeuPonto.Modules.Pontos.Comprovantes.DetalharModel
 
 @{
     ViewData["Title"] = "Detalhar Comprovante de Ponto";
