--- a/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Comprovantes/Index.cshtml
@@ -1,22 +1,26 @@
 ﻿@page
-@model MeuPonto.Modules.Pontos.Comprovantes.ComprovantesModel
+@model MeuPonto.Modules.Pontos.Comprovantes.IndexModel
 
 @{
     ViewData["Title"] = "Comprovantes de Ponto";
 }
 
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a asp-page="/Index"><i class="bi bi-house"></i></a></li>
-        <li class="breadcrumb-item"><a asp-page="/Pontos/Index">Pontos</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Comprovantes</li>
-    </ol>
-</nav>
+@section Breadcrumb {
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a asp-page="/Index"><i class="bi bi-house"></i></a></li>
+            <li class="breadcrumb-item"><a asp-page="/Pontos/Index">Pontos</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Comprovantes</li>
+        </ol>
+    </nav>
+}
+
+@section Title {
+    @ViewData["Title"]
+}
 
 @if (User.Identity?.IsAuthenticated == true)
 {
-    <h1>@ViewData["Title"]</h1>
-
     <div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
         <div class="btn-group" role="group" aria-label="First group">
             <a class="btn btn-primary" asp-page="./Criar" target="_modal">
