--- a/src/MeuPonto.Web/Modules/Pontos/Excluir.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Excluir.cshtml
@@ -147,6 +147,7 @@
 
 @section FormActions {
     <input type="hidden" asp-for="Ponto.Id" />
+    <input type="hidden" asp-for="RefererUrl" />
     <button type="submit" value="Excluir" class="btn btn-danger">
         Excluir
     </button>
