--- a/src/MeuPonto.Web/Modules/Pontos/Folhas/Detalhar.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Folhas/Detalhar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model MeuPonto.Modules.Pontos.Folhas.DetalharFolhaModel
+@model MeuPonto.Modules.Pontos.Folhas.DetalharModel
 
 @{
     ViewData["Title"] = "Detalhar Folha de Ponto";
