--- a/src/MeuPonto.Web/Modules/Pontos/Marcar.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Marcar.cshtml
@@ -104,6 +104,7 @@
 </div>
 
 @section FormActions {
+    <input type="hidden" asp-for="RefererUrl" />
     <button type="submit" value="Marcar" class="btn btn-primary">
         Marcar
     </button>
