--- a/src/MeuPonto.Web/Modules/Trabalhadores/Editar.cshtml
+++ b/src/MeuPonto.Web/Modules/Trabalhadores/Editar.cshtml
@@ -72,6 +72,7 @@
 
 @section FormActions {
     <input type="hidden" asp-for="Trabalhador.Version" />
+    <input type="hidden" asp-for="RefererUrl" />
     <button type="submit" value="Salvar" class="btn btn-primary">
         Salvar
     </button>
