--- a/src/MeuPonto.Web/Modules/Perfis/Criar.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Criar.cshtml
@@ -102,6 +102,7 @@
 </div>
 
 @section FormActions {
+    <input type="hidden" asp-for="RefererUrl" />
     <button type="submit" value="Salvar" class="btn btn-primary">
         Salvar
     </button>
