--- a/src/MeuPonto.Web/Modules/Perfis/Excluir.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Excluir.cshtml
@@ -119,6 +119,7 @@
 
 @section FormActions {
     <input type="hidden" asp-for="Perfil.Id" />
+    <input type="hidden" asp-for="RefererUrl" />
     <button type="submit" value="Excluir" class="btn btn-danger">
         Excluir
     </button>
