--- a/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
+++ b/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
@@ -187,17 +187,17 @@
 
             var anuncioId = random.Next(3) + 1;
 
-            <div class="navbar navbar-light bg-light fixed-bottom border-top">
+            <div class="navbar navbar-light text-bg-light fixed-bottom border-top">
                 @switch (anuncioId)
                 {
                     case 1:
                         <div class="container justify-content-start">
                             <span class="badge text-bg-secondary me-2">Anúncio</span>
-                            <span class="navbar-brand">
+                            <span class="navbar-brand text-bg-light">
                                 <img class="img-thumbnail border border-secondary bg-light" src="~/img/shop-32x32.png" width="32" height="32" alt="Shop" />
                                 Anuncie aqui
                             </span>
-                            <span class="navbar-text flex-grow-1">
+                            <span class="navbar-text text-bg-light flex-grow-1">
                                 Seja visto pelos trabalhadores de todo o Brasil
                             </span>
                             <span>
@@ -213,11 +213,11 @@
                     case 2:
                         <div class="container justify-content-start">
                             <span class="badge text-bg-secondary me-2">Anúncio</span>
-                            <span class="navbar-brand">
+                            <span class="navbar-brand text-bg-light">
                                 <img class="img-thumbnail border border-secondary bg-light" src="~/img/marcelo-32x32.png" width="32" height="32" alt="Foto" />
                                 Marcelo Dias
                             </span>
-                            <span class="navbar-text flex-grow-1">
+                            <span class="navbar-text text-bg-light flex-grow-1">
                                 Desenvolvedor .NET Sênior
                             </span>
                             <span>
@@ -239,11 +239,11 @@
                     case 3:
                         <div class="container justify-content-start">
                             <span class="badge text-bg-secondary me-2">Anúncio</span>
-                            <span class="navbar-brand">
+                            <span class="navbar-brand text-bg-light">
                                 <img class="img-thumbnail border border-secondary bg-light" src="~/img/ateliex-32x32.png" width="32" height="32" alt="Logo" />
                                 Ateliex
                             </span>
-                            <span class="navbar-text flex-grow-1">
+                            <span class="navbar-text text-bg-light flex-grow-1">
                                 Desenvolvimento de sistemas
                             </span>
                             <span>
